--- a/src/input-group.scss
+++ b/src/input-group.scss
@@ -28,6 +28,7 @@ $fd-input-border-radius: var(--sapField_BorderCornerRadius);
   background-color: var(--sapField_Background);
   width: 100%;
   overflow: hidden;
+  text-shadow: var(--fdInputGroup_Text_Shadow);
 
   // states
   @include fd-form-states();
@@ -73,6 +74,7 @@ $fd-input-border-radius: var(--sapField_BorderCornerRadius);
     flex: 1 1 $fd-input-width-basis;
     padding-right: 0.25rem;
     padding-left: 0.25rem;
+    text-shadow: var(--fdInputGroup_Text_Shadow);
 
     @include fd-focus() {
       outline: none;
